--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Marirs</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">This is my First Site, Dedicated to Everything That is Me.</span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Hello, my name is Sriram Ranganathan; online I am Marirs, and my friends call me Shree. I am a college student studying at Miami University - Oxford, Ohio, currently majoring in Computer Science and Minoring in Philosophy, with an interest in the field of cybersecurity.</p>
+                        <p>There is nothing here yet, but on this site I plan to house a plethora of things that represent who I am and what I like to do. I have a wide range of passions and want to show others a glimpse into all the seperate facets of my life that make me, me.</p>
+                        <p>I plan to showcase things such as philosophical essays I have written, artworks which I have created, fitness content, advice, and information, and most importantly, projects and information which showcase my abilities as a programmer and student of computer science.</p>
                     </div>
                 </div>
             </div>
