--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Marirs</a>
+                <a class="navbar-brand" href="index.html">SR</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -39,8 +39,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Welcome to the SR Portfolio...</h1>
-                            <span class="subheading">A Site Showcasing the Personal and Proffesional Content of Sriram Ranganathan.</span>
+                            <h1>The SR Portfolio...</h1>
+                            <span class="subheading">A site showcasing the personal and proffesional content of Sriram Ranganathan.</span>
                         </div>
                     </div>
                 </div>
